Solved conflicts, and broken paths